versions/v4.1.0/build/dts/api/bindings/pinctrl/nxp,mcux-rt-pinctrl.md
---
version: v4.1.0
source_url: https://docs.zephyrproject.org/4.1.0/build/dts/api/bindings/pinctrl/nxp,mcux-rt-pinctrl.html
original_path: build/dts/api/bindings/pinctrl/nxp,mcux-rt-pinctrl.html
---

# nxp,mcux-rt-pinctrl

Vendor: [NXP Semiconductors](../../bindings.md#dt-vendor-nxp)

## Description

```text
The node has the 'pinctrl' node label set in MCUX RT SoC's devicetree. These
nodes can be autogenerated using the MCUXpresso config tools combined with
the rt_dts_gen.py script in NXP's HAL. The mux, mode, input, daisy, and cfg
fields in a group select the pins to be configured, and the remaining
devicetree properties set configuration values for those pins
for example, here is an group configuring LPUART1 pins:

group0 {
  pinmux = <&iomuxc_gpio_ad_b0_12_lpuart1_tx,
    &iomuxc_gpio_ad_b0_13_lpuart1_rx>;
  drive-strength = "r0-6";
  slew-rate = "slow";
  nxp,speed = "100-mhz";
};

This will select GPIO_AD_B0_12 as LPUART1 TX, and GPIO_AD_B0_13 as LPUART1 RX.
Both pins will be configured with a weak latch, drive strength of "r0-6",
slow slew rate, and 100 MHZ speed.
Note that the soc level iomuxc dts file can be examined to find the possible
pinmux options. Here are the affects of each property on the
IOMUXC SW_PAD_CTL register:
input-schmitt-enable: HYS=1
drive-open-drain: ODE=1
input-enable: SION=1 (in SW_MUX_CTL_PAD register)
bias-pull-down: PUE=1, PUS=<bias-pull-down-value>
bias-pull-up: PUE=1, PUS=<bias-pull-up-value>
bias-disable: PKE=0
slew-rate: SRE=<enum_idx>
drive-strength: DSE=<enum_idx>
nxp,speed: SPEED=<enum_idx>

If only required properties are supplied, the pin will have the following
configuration:
HYS=0,
ODE=0,
SION=0,
PUE=0,
PUS=0,
PKE=1,
SRE=<slew-rate>,
DSE=<drive-strength>,
SPEED=<nxp,speed>
```

## Properties

### Top level properties

These property descriptions apply to “nxp,mcux-rt-pinctrl”
nodes themselves. This page also describes child node
properties in the following sections.

Node specific propertiesDeprecated node specific propertiesBase properties

Properties not inherited from the base binding file.

(None)

Deprecated properties not inherited from the base binding file.

(None)

Properties inherited from the base binding file, which defines
common properties that may be set on many nodes. Not all of these
may apply to the “nxp,mcux-rt-pinctrl” compatible.

| Name | Type | Details |
| --- | --- | --- |
| `status` | `string` | ```text Indicates the operational status of the hardware or other resource that the node represents. In particular:    - "okay" means the resource is operational and, for example,     can be used by device drivers   - "disabled" means the resource is not operational and the system     should treat it as if it is not present  For details, see "2.3.4 status" in Devicetree Specification v0.4. ```  Legal values: `'ok'`, `'okay'`, `'disabled'`, `'reserved'`, `'fail'`, `'fail-sss'`  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `compatible` | `string-array` | ```text This property is a list of strings that essentially define what type of hardware or other resource this devicetree node represents. Each device driver checks for specific compatible property values to find the devicetree nodes that represent resources that the driver should manage.  The recommended format is "vendor,device", The "vendor" part is an abbreviated name of the vendor. The "device" is usually from the datasheet.  The compatible property can have multiple values, ordered from most- to least-specific. Having additional values is useful when the device is a specific instance of a more general family, to allow the system to match the most specific driver available.  For details, see "2.3.1 compatible" in Devicetree Specification v0.4. ```  This property is **required**.  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg` | `array` | ```text Information used to address the device. The value is specific to the device (i.e. is different depending on the compatible property).  The "reg" property is typically a sequence of (address, length) pairs. Each pair is called a "register block". Values are conventionally written in hex.  For details, see "2.3.6 reg" in Devicetree Specification v0.4. ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `reg-names` | `string-array` | ```text Optional names given to each register block in the "reg" property. For example:    / {        soc {            #address-cells = <1>;            #size-cells = <1>;             uart@1000 {                reg = <0x1000 0x2000>, <0x3000 0x4000>;                reg-names = "foo", "bar";            };        };   };  The uart@1000 node has two register blocks:    - one with base address 0x1000, size 0x2000, and name "foo"   - another with base address 0x3000, size 0x4000, and name "bar" ``` |
| `interrupts` | `array` | ```text Information about interrupts generated by the device, encoded as an array of one or more interrupt specifiers. The format of the data in this property varies by where the device appears in the interrupt tree. Devices with the same "interrupt-parent" will use the same format in their interrupts properties.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `interrupts-extended` | `compound` | ```text Extended interrupt specifier for device, used as an alternative to the "interrupts" property.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `interrupt-names` | `string-array` | ```text Optional names given to each interrupt generated by a device. The interrupts themselves are defined in either "interrupts" or "interrupts-extended" properties.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `interrupt-parent` | `phandle` | ```text If present, this refers to the node which handles interrupts generated by this device.  For details, see "2.4 Interrupts and Interrupt Mapping" in Devicetree Specification v0.4. ``` |
| `label` | `string` | ```text Human readable string describing the device. Use of this property is deprecated except as needed on a case-by-case basis.  For details, see "4.1.2 Miscellaneous Properties" in Devicetree Specification v0.4. ```  See [Important properties](../../../intro-syntax-structure.md#dt-important-props) for more information. |
| `clocks` | `phandle-array` | ```text Information about the device's clock providers. In general, this property should follow conventions established in the dt-schema binding:    https://github.com/devicetree-org/dt-schema/blob/main/dtschema/schemas/clock/clock.yaml ``` |
| `clock-names` | `string-array` | ```text Optional names given to each clock provider in the "clocks" property. ``` |
| `#address-cells` | `int` | ```text This property encodes the number of <u32> cells used by address fields in "reg" properties in this node's children.  For details, see "2.3.5 #address-cells and #size-cells" in Devicetree Specification v0.4. ``` |
| `#size-cells` | `int` | ```text This property encodes the number of <u32> cells used by size fields in "reg" properties in this node's children.  For details, see "2.3.5 #address-cells and #size-cells" in Devicetree Specification v0.4. ``` |
| `dmas` | `phandle-array` | ```text DMA channel specifiers relevant to the device. ``` |
| `dma-names` | `string-array` | ```text Optional names given to the DMA channel specifiers in the "dmas" property. ``` |
| `io-channels` | `phandle-array` | ```text IO channel specifiers relevant to the device. ``` |
| `io-channel-names` | `string-array` | ```text Optional names given to the IO channel specifiers in the "io-channels" property. ``` |
| `mboxes` | `phandle-array` | ```text Mailbox / IPM channel specifiers relevant to the device. ``` |
| `mbox-names` | `string-array` | ```text Optional names given to the mbox specifiers in the "mboxes" property. ``` |
| `power-domains` | `phandle-array` | ```text Power domain specifiers relevant to the device. ``` |
| `power-domain-names` | `string-array` | ```text Optional names given to the power domain specifiers in the "power-domains" property. ``` |
| `#power-domain-cells` | `int` | ```text Number of cells in power-domains property ``` |
| `zephyr,deferred-init` | `boolean` | ```text Do not initialize device automatically on boot. Device should be manually initialized using device_init(). ``` |
| `wakeup-source` | `boolean` | ```text Property to identify that a device can be used as wake up source.  When this property is provided a specific flag is set into the device that tells the system that the device is capable of wake up the system.  Wake up capable devices are disabled (interruptions will not wake up the system) by default but they can be enabled at runtime if necessary. ``` |
| `zephyr,pm-device-runtime-auto` | `boolean` | ```text Automatically configure the device for runtime power management after the init function runs. ``` |
| `zephyr,disabling-power-states` | `phandles` | ```text List of power states that will disable this device power. ``` |

### Grandchild node properties

| Name | Type | Details |
| --- | --- | --- |
| `pinmux` | `phandles` | ```text Pin mux selections for this group. See the soc level iomuxc DTSI file for a defined list of these options. ```  This property is **required**. |
| `drive-strength` | `string` | ```text Pin output drive strength. Sets the DSE field in the IOMUXC peripheral. the drive strength is expressed as a output impedance at a given voltage, but maximum current values can be calculated from these impedances for a specific load impedance. 000 DSE_0_output_driver_disabled_ — output driver disabled 001 DSE_1_R0_1 — 157 Ohm impedance @3.3V, 260 Ohm impedance @1.8V 010 DSE_2_R0_2 — 78 Ohm @3.3V, 130 Ohm @1.8V 011 DSE_3_R0_3 — 53 Ohm @3.3V, 88 Ohm @1.8V 100 DSE_4_R0_4 — 39 Ohm @3.3V, 65 Ohm @1.8V 101 DSE_5_R0_5 — 32 Ohm @3.3V, 52 Ohm @1.8V 110 DSE_6_R0_6 — 32 Ohm @3.3V, 43 Ohm @1.8V 111 DSE_7_R0_7 — 26 Ohm @3.3V, 37 Ohm @1.8V ```  This property is **required**.  Legal values: `'disabled'`, `'r0'`, `'r0-2'`, `'r0-3'`, `'r0-4'`, `'r0-5'`, `'r0-6'`, `'r0-7'` |
| `bias-pull-up-value` | `string` | ```text Select the value of the pull up resistor present on this pin Corresponds to the PUS field in the IOMUXC peripheral. 47k resistor selected as default due to this being the default pullup value on most SOC pins 00 Unused- no change will be applied to pin 01 PUS_1_47K_Ohm_Pull_Up — 47K Ohm Pull Up 10 PUS_2_100K_Ohm_Pull_Up — 100K Ohm Pull Up 11 PUS_2_22K_Ohm_Pull_Up — 22K Ohm Pull Up ```  Default value: `47k`  Legal values: `'unused'`, `'47k'`, `'100k'`, `'22k'` |
| `bias-pull-down-value` | `string` | ```text Select the value of the pull up resistor present on this pin Corresponds to the PUS field in the IOMUXC peripheral. 100k is currently the only supported pull down resistance. 00 PUS_0_100K_Ohm_Pull_Down - 100K Ohm Pull Down ```  Default value: `100k`  Legal values: `'100k'` |
| `slew-rate` | `string` | ```text Select slew rate for pin. Corresponds to SRE field in IOMUXC peripheral 0 SRE_0_Slow_Slew_Rate — Slow Slew Rate 1 SRE_1_Fast_Slew_Rate — Fast Slew Rate ```  This property is **required**.  Legal values: `'slow'`, `'fast'` |
| `nxp,speed` | `string` | ```text Sets pin speed. Corresponds to SPEED field in IOMUXC peripheral 00 SPEED_0_low_50MHz_ — low(50MHz) 01 SPEED_1_medium_100MHz_ — medium(100MHz) 10 SPEED_2_medium_150MHz_ — medium(150MHz) 11 SPEED_3_max_200MHz_ — max(200MHz) ```  Legal values: `'50-mhz'`, `'100-mhz'`, `'150-mhz'`, `'200-mhz'` |
| `bias-disable` | `boolean` | ```text disable any pin bias ``` |
| `bias-pull-up` | `boolean` | ```text enable pull-up resistor ``` |
| `bias-pull-down` | `boolean` | ```text enable pull-down resistor ``` |
| `drive-open-drain` | `boolean` | ```text drive with open drain (hardware AND) ``` |
| `input-enable` | `boolean` | ```text enable input on pin (e.g. enable an input buffer, no effect on output) ``` |
| `input-schmitt-enable` | `boolean` | ```text enable schmitt-trigger mode ``` |
